<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/selectable_item_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/setting_enable_click"
        />
        <android.support.v7.widget.SwitchCompat
                android:id="@+id/setting_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
        />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/selectable_item_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/setting_enable_auto_fresh"
        />
        <android.support.v7.widget.SwitchCompat
                android:id="@+id/setting_auto_fresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
        />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/selectable_item_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/setting_auto_fresh_period"
        />
        <RadioGroup
                android:id="@+id/radio_group_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/radio_button_period_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.5h"/>
            <RadioButton
                    android:id="@+id/radio_button_period_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1h"/>
            <RadioButton
                    android:id="@+id/radio_button_period_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="6h"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/selectable_item_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/setting_text_size"
        />
        <RadioGroup
                android:id="@+id/radio_group_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/radio_button_text_size_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="小"/>
            <RadioButton
                    android:id="@+id/radio_button_text_size_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="默认"/>
            <RadioButton
                    android:id="@+id/radio_button_text_size_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="大"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/selectable_item_background">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/setting_text_color"
        />
        <RadioGroup
                android:id="@+id/radio_group_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/radio_button_text_color_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="黑"/>
            <RadioButton
                    android:id="@+id/radio_button_text_color_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="灰"/>
            <RadioButton
                    android:id="@+id/radio_button_text_color_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="自定义"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>